--- a/client/main.css
+++ b/client/main.css
@@ -23,3 +23,49 @@
 .button.is-link.selected {
     color: #00d1b2;
 }
+
+/*toggle button*/
+input.switch:empty {
+  margin-left: -999px;
+}
+input.switch:empty ~ label {
+  position: relative;
+  float: right;
+  line-height: 25.6px;
+  text-indent: 64px;
+  margin: 4px 0;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-size: 16px !important;
+}
+input.switch:empty ~ label:before,
+input.switch:empty ~ label:after {
+  position: absolute;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  content: ' ';
+  width: 3.6em;
+  background-color: #ff2b56;
+  border-radius: 4.8px;
+  -webkit-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
+}
+input.switch:empty ~ label:after {
+  width: 22.4px;
+  top: 1.6px;
+  bottom: 1.6px;
+  margin-left: 1.6px;
+  background-color: #fff;
+  border-radius: 2.4px;
+}
+input.switch:checked ~ label:before {
+  background-color: #22c65b;
+}
+input.switch:checked ~ label:after {
+  margin-left: 33.6px;
+}
