added pointer cursor and click handler and yeah

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -83,6 +83,7 @@ input.switch:checked ~ label:after {
 }
 .message-read:hover {
     border: 1px #276cda solid;
+    cursor: pointer;
 }
 
 .message-unread {
@@ -92,4 +93,5 @@ input.switch:checked ~ label:after {
 
 .message-unread:hover {
     border: 1px #dbdbdb solid;
+    cursor: pointer;
 }
