moved and changed delete btn

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -95,3 +95,8 @@ input.switch:checked ~ label:after {
     border: 1px #dbdbdb solid;
     cursor: pointer;
 }
+
+.icon.fa-trash-o:hover {
+    cursor: pointer;
+    
+}
